SIMPLEX-97 Refactor authoring stats code.